feat: harden Java onboarding and multi-agent defaults